--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,10 @@
 <!--            android:exported="true">-->
 <!--        </activity>-->
         <activity
-            android:name="ae.tudomart.store.ui.activities.SubstitutedProductsListActivity"
+            android:name="com.tudomart.store.ui.activities.SubstitutedProductsListActivity"
             android:exported="false" />
         <activity
-            android:name="ae.tudomart.store.ui.activities.ordersubstitute.SearchProductsActivity"
+            android:name="com.tudomart.store.ui.activities.ordersubstitute.SearchProductsActivity"
             android:exported="false" />
 
         <service android:name=".helpers.network.service.SocketService" />
